# dimc

./: .gitignore  .pyre_configuration  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  Makefile.example  README.md  README_zh-CN.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: PULL_REQUEST_TEMPLATE.md  ci.yml
docs/: ARCHITECTURE_INDEX.md  CORE_OBJECT_MODEL.md  DIMC_DOWN_FLOW.md  EVIDENCE_POLICY_AND_CAUSALITY_GRADES.md  GUIDE.md  IDE_INTEGRATION.md  P4_STORAGE_EVALUATION.md  PROJECT_ARCHITECTURE.md  STATUS.md  STORAGE_ARCHITECTURE.md  USER_GUIDE.md  V6.0_OVERVIEW.md  VISION.md  agent-handover.md  api_contracts.yaml  dimc_down_flowchart.md  implementation_plan.md  rules_check.md  tree_src.txt  tree_src_full.txt
docs/PROPOSALS/: CONTRACT_TEMPLATE.md  CORE_OBJECT_MODEL_V1.md  EVIDENCE_POLICY_AND_CAUSALITY_GRADES_V1.md  P_reply_RFC_Preparation.md  README.md  REPO_WORKFLOW_AND_GOVERNANCE_BOUNDARY_V1.md  STORAGE_ARCHITECTURE_DRAFT_V1.md  TASK_PACKET_TEMPLATE.md  UNIX_RETRIEVAL_CONTRACT.md  V6.3_CAUSAL_LINKER_DESIGN.md  V6.3_IMPLEMENTATION_PLAN.md  V6.3_extraction_pipeline_design.md  WORKSPACE_PROFILE_V1.md  argument_MG.md  glittery-wishing-treehouse.md
docs/V6.0/: DEV_ONTOLOGY.md  RFC-002-MULTI-AGENT.md
docs/analysis/: DIMC_DOWN_ARCHITECTURE_AUDIT.md  REHABILITATION_PLAN.md  TRUTH_AUDIT.md
docs/audit/: CRITICAL-DEGRADATION-AUDIT.md  P3_AUDIT_REPORT.md  Q博士审计四大罪行修复报告.md  README.md
docs/audit_reports/: 2017_02-17_PERPLEXITY_AUDIT-AI-Per-03.md  2017_02-17_PERPLEXITY_AUDIT_REPORT-01.md  2026-02-17_DESIGN_ALIGNMENT.md  2026-02-17_PHASE_6.1_PRODUCTION_PLAN_V2.md  2026-02-17_VERIFICATION_PROOF.md  2026-02-18_PHASE_6.1_V2_AUDIT_CHECKLIST.md  2026-02-24-AGENT_GIT_INCIDENT_POSTMORTEM.md  L1_L3_ALIGNMENT_AUDIT_V6.2.md  audit_20260217.txt
docs/coordination/: README.md  (+6 more)
scripts/: apply_typer_fix.py  audit_phase3.py  backfill_january.sh  backfill_recent.sh  benchmark_graph.py  bootstrap.sh  check.zsh  com.dimcause.daemon.plist  com.mal.daemon.plist  context_loader.py  daily_end.sh  daily_prompt.sh  daily_summary.sh  debug_state.py  download_models_cn.py  drill_v1_migration.py  emergency_rollback.sh  env_utils.sh  find_unclosed_string.py  fix_unknown_events.py  import_ag_export.py  install_daemon.sh  job_prompt.sh  lock_utils.sh  log_indexer.py  pr_ready.py  preflight_guard.py  prove_resources.py  run_dimc.py  run_mal.py  sanitize_cli.py  scan_typer_types.py  seed_and_export.py  smoke_test.zsh  task_manager.py  test_e2e_models.py  test_e2e_search.py  test_memory_interactive.py  test_real_memory.py  uninstall_daemon.sh  (+8 more)
tests/: conftest.py  e2e_daemon_passive.py  e2e_wal_recovery.py  repro_audit_fix.py  repro_graph_search.py  repro_ontology_fix.py  reproduce_deepseek.py  test_add_if_not_exists.py  test_analyzer.py  test_ast_advanced.py  test_audit_cli.py  test_audit_engine.py  test_audit_security.py  test_auth.py  test_base_watcher.py  test_brain_decision.py  test_chunk_store.py  test_cli.py  test_cli_brain.py  test_cli_detect.py  test_cli_event_index.py  test_cli_history.py  test_cli_mcp.py  test_cli_migrate.py  test_cli_search_helpers.py  test_cli_timeline.py  test_code_indexer.py  test_config.py  test_context.py  test_continue_watcher.py  test_core_history.py  test_cost_tracker.py  test_coverage_boost.py  test_daemon.py  test_daemon_cli.py  test_daemon_full.py  test_daemon_manager.py  test_deepseek_client.py  test_e2e.py  test_e2e_scenarios.py  (+60 more)
(+255 files in other folders)
