[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dimcause"
version = "0.1.0"
description = "Evidence-backed causal investigation system for local heterogeneous materials."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "JoeyOnMars"}
]
keywords = ["ai", "context", "memory", "llm", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "networkx>=3.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.2.2",
    "textual>=0.40.0",
    # AST 分析（核心能力）
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
    "tree-sitter-javascript>=0.20.0",
    "tree-sitter-typescript>=0.20.0",
    "watchdog>=4.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
# 核心功能
full = [
    "litellm>=1.0.0",
    "networkx>=3.0",
    "httpx>=0.25.0",
    "sentence-transformers>=2.2.0",  # BGE 嵌入模型
    "python-frontmatter>=1.0.0",  # Markdown frontmatter 解析
    "sqlite-vec>=0.1.1",  # sqlite-vec 向量索引扩展 (MAL-SEARCH-001)
    "tiktoken>=0.5.0",  # Token 计数与分块 (MAL-SEARCH-001)
]
# 开发依赖
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
# AST 分析（备用语言支持，如需新增语言在此添加）
ast = [
]
# 全部安装
all = [
    "dimcause[full,dev,ast]",
]

[project.scripts]
dimc = "dimcause.cli:main"
dimcause = "dimcause.cli:main"

[project.urls]
Homepage = "https://github.com/JoeyOnMars/dimc"
Repository = "https://github.com/JoeyOnMars/dimc"
Documentation = "https://github.com/JoeyOnMars/dimc/docs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.yaml", "*.yml"]

# === 工具配置 ===

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/dimcause"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
    "@abstractmethod",
    "\\.\\.\\.",  # Ellipsis (abstract method body)
    "def __repr__",
    "if TYPE_CHECKING:",
    "except ImportError",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # function call in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["dimcause"]
